# computational-intelligence

./: Halloween.ipynb  README.md  pyproject.toml  set-covering.ipynb
HalloweenChallenge/: Halloween.ipynb  HalloweenChallenge_Summary.md
Lab10_TicTacToeRL/: lab10-gx.ipynb
Lab10_TicTacToe_Minmax/: agent.py  environment.py  main.py  minmax_agent.py  parameters.py  random_agent.py  results211185752.txt  results211191059.txt  results211191238.txt  results211191943.txt  results211192147.txt  results211192326.txt  results21119240.txt  results21119523.txt  results21119724.txt  results21119839.txt  results213164749.txt  results21316485.txt  results21316501.txt  tictactoe.py
Lab1_setcovering/: set-covering-astar.ipynb
Lab2_Nim/: ES_agent.py  Individual.py  Nim.py  lab2-nim.ipynb  main.py
Lab2_Nim/ES_train/: ES_agent_parameters_2024_2_7_14_53_12.txt  ES_agent_parameters_2024_2_7_15_1_25.txt
Lab2_Nim/ES_train/optimal/: ES_agent_parameters_2024_2_7_16_37_2.txt
Lab2_Nim/ES_train/pure_random/: ES_agent_parameters_2024_2_7_15_34_16.txt  ES_agent_parameters_2024_2_7_15_40_3.txt  ES_agent_parameters_2024_2_7_15_45_12.txt  ES_agent_parameters_2024_2_7_15_50_19.txt  ES_agent_parameters_2024_2_7_15_55_27.txt  ES_agent_parameters_2024_2_7_16_11_15.txt  (+4 more)
Lab2_Nim_ESagent/: ES_agent.py  README.md  lab2-nim.ipynb  try.ipynb
Lab9_GeneticAlgorithm/: lab9.ipynb  results.md
Quixo/: README.md  batman.py  game.py  human_player.py  joker.py  main.ipynb  main.py  mimax_v1.0.ipynb  minmax_player.py  mm_utils.py  random_player.py  utility_test.ipynb
